--- a/index.html
+++ b/index.html
@@ -13,48 +13,42 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <!---css--->
   <link rel="stylesheet" href="./scss/estilos.css">
-  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
+  
 </head>
 <!---animacion--->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 <!---body--->
 
-<body class="bindex d-flex flex-column">
-  <header>
-    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
-      <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
-      <a class="navbar-brand " href="./index.html">Los2Primos</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./pages/niñas.html">Niñas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./pages/niños.html">Niños<a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./pages/nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./pages/contacto.html">Contacto<a>
-            </li>
-
-          </ul>
-        </div>
+<body class="bindex ">
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="./index.html">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/niñas.html">niñas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/niños.html">niños</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/nosotros.html">nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/contacto.html">contacto</a>
+          </li>
+          
       </div>
     </div>
-    </nav>
-  </header>
-  <!---main--->
-  <main class="hero">
+  </nav>
+  <main >
     <h1 class=" titulo_bienvenida text-center logo-media mt-2">
       Bienvenidos a indumetaria Los2Primos</h1>
   <section class=" container-fluid d-flex flex-column justify-content-center aligin-items-center">
@@ -100,20 +94,19 @@
     </div>
   </section>
 </main>
-  <!---pie--->
-  <footer class=" pt-3">
-    <div class="text-center d-flex justify-content-center align-items-center flex-column">
-      <div class="redes">
-        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram "></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook "></i></a>
-         <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp pb-2 "></i></a>
-       </div>
-      <div>
-        <h6>Todos los derechos reservados ©</h6>
-        <h6>By Los2Primos</h6>
-    </div>
-  </div> 
-  </footer>
+<footer class=" pt-3">
+  <div class="text-center d-flex justify-content-center align-items-center flex-column">
+    <div class="redes">
+      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram "></i></a>
+      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook "></i></a>
+       <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp pb-2 "></i></a>
+     </div>
+    <div>
+      <h6>Todos los derechos reservados ©</h6>
+      <h6>By Los2Primos</h6>
+  </div>
+</div> 
+</footer>
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
