--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!---titulo--->
-  <title>Los2Primos - Contacto</title>
-  <meta name="description" content="ropa para chicos">
-  <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,contacto">
-  <link rel="stylesheet" href="../scss/estilos.css">
-  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <title>Los2Primos</title>
-  <!---bootstrap--->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <!---cabecera--->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!---titulo--->
+    <title>Los2Primos - Contacto</title>
+    <meta name="description" content="Registrate y obtene los mejores descuentos">
+    <meta name="keywords" content="informacion,ropa,niños,niñas,moda,calidad,indumentaria,contacto">
+    <!---css--->
+    <link rel="stylesheet" href="../scss/estilos.css">
+    <!---iconos--->
+    
+    <!---aos--->
+<link
+ rel="stylesheet"
+ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"
+/>
+<link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <title>Los2Primos</title>
+    <!---bootstrap--->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
+<!---body--->
 
-<body class="bmenu d-flex flex-column">
-  <nav
-    class=" navbar navbar-expand-lg bg-light  justify-content-center aligin-items-center animate__animated animate__fadeInDownBig">
-    <div class="container-fluid d-flex  flex-column justify-content-center aligin-items-center ">
-      <a class="navbar-brand " href="../index.html">Los2Primos</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<body class="bmenu">
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
+            <a class="nav-link" href="../pages/niñas.html">niñas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/niños.html">Niños<a>
+            <a class="nav-link" href="../pages/niños.html">niños</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
+            <a class="nav-link" href="../pages/nosotros.html">nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
+            <a class="nav-link" href="../pages/contacto.html">contacto</a>
           </li>
-
-        </ul>
+          
       </div>
     </div>
   </nav>
-  <!---main--->
   <main>
     <article class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
 
@@ -64,79 +64,67 @@
         quasi esse itaque facere error cumque, corrupti, praesentium ex consequatur deserunt obcaecati iste!
       </p>
     </article>
-    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
-      <div class="row ">
-        <div class="col-md-6 justify-content-center aligin-items-center ">
-          <div class="accordion accordion-flush" id="accordionFlushExample">
-            <h3 class="info">Informacion</h3>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="flush-headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                  Correo electronico
-                </button>
-              </h2>
-              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Indumentaria@los2primos.com</div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="flush-headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                  Telefono
-                </button>
-              </h2>
-              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
-                data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body"> 011 4729 6241 </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="flush-headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                  Direccion
-                </button>
-              </h2>
-              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
-                data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Buenos Aires 6655 localidad Jose Leon Suarez </div>
-              </div>
-            </div>
+    <section class="container-fluid pb-4 pt-2 mt-5">
+      <div class="row fondocolor--colorfondo1">
+        <h2 class="mt-4">Deje sus datos para registrarse:</h2>
+  <article class="col-md-6 mt-4 w-75 h-100">
+      <form class="row g-3">
+          <div class="col-md-12">
+            <label for="inputEmail4" class="form-label">Email</label>
+            <input type="email" class="form-control" id="inputEmail4" placeholder="Ingrese su email...">
           </div>
-        </section>
-        <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
-
-        <div class=" formulario col-md-6">
-          <h2 class="tituloform">Registrate</h2>
-          <form>
-            <div class="form">
-              <div class="mb-3 formc">
-                <label for="exampleInputEmail1" class="form-label">Nombre</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text"></div>
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text"></div>
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-              </div>
-              <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Acepto bases y condiciones</label>
-              </div>
-              <button type="submit" class="btn btn-primary">Registrarme</button>
-          </form>
-        </div>
+          <div class="col-12">
+            <label for="inputAddress" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="Ingrese su nombre...">
+          </div>
+          <div class="col-12">
+            <label for="inputAddress2" class="form-label">Apellido</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="Ingrese su apellido...">
+          </div>
+            <div class="col-12">
+            <button type="submit" class="btn bg-meli btn-duracion">Enviar</button>
+          </div>
+        </form>
+  </article>
+  <div class="accordion accordion-flush" id="accordionFlushExample">
+    <h3 class="info">Informacion</h3>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+          Correo electronico
+        </button>
+      </h2>
+      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+        data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Indumentaria@los2primos.com</div>
       </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          Telefono
+        </button>
+      </h2>
+      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+        data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body"> 011 4729 6241 </div>
       </div>
-    </section>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingThree">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          Direccion
+        </button>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+        data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Buenos Aires 6655 localidad Jose Leon Suarez </div>
+      </div>
+    </div>
+  </div>
 
 
   </main>
@@ -155,12 +143,8 @@
     </div>
   </div> 
   </footer>
- 
-  <!---link bootstrap--->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
+    <!---link bootstrap--->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
-
 </html>
