--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -12,7 +12,7 @@
   <!---css--->
   <link rel="stylesheet" href="../scss/estilos.css">
   <!---script iconos--->
-  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
+ 
   <!---aos--->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -22,39 +22,35 @@
 </head>
 <!---body--->
 
-<body class="bniñas d-flex flex-column">
-  <header>
-    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
-      <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
-        <a class="navbar-brand" href="../index.html">Los2Primos</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../pages/niños.html">Niños<a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
-            </li>
-
-          </ul>
-        </div>
+<body class="bniñas">
+ 
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="./index.html">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/niñas.html">niñas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/niños.html">niños</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/nosotros.html">nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/contacto.html">contacto</a>
+          </li>
+          
       </div>
-    </nav>
-  </header>
-  <!---main--->
+    </div>
+  </nav>
   <main>
     <h1 class="text-center titulo_ellas">Pensado para <span style="color: purple ">ellas</span></h1>
     <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
@@ -116,6 +112,9 @@
   </div> 
   
   </footer>
+
+
+
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
