--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,60 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!---css--->
-  <link rel="stylesheet" href="../scss/estilos.css">
-
-  <!---titulo--->
-  <title>Los2Primos - Nosotros</title>
-  <meta name="description" content="ropa para chicos">
-  <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,conocenos">
-  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-  <title>Los2Primos</title>
-   <!---aos--->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <!---bootstrap--->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <!---cabecera--->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!---titulo--->
+ <title>Los2Primos - Nosotros</title>
+ <meta name="description" content="Conoce nuestra historia">
+ <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,conocenos,creadores">
+ <!---css--->
+ <link rel="stylesheet" href="../scss/estilos.css">
+ <!---iconos--->
+ <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
+ <!---aos--->
+<link
+ rel="stylesheet"
+ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"
+/>
+<link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!---bootstrap--->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
+<!---body--->
 
-<body class="bnosotros d-flex flex-column">
-  <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
-    <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
-      <a class="navbar-brand" href="../index.html">Los2Primos</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<body class="bnosotros">
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
+            <a class="nav-link" href="../pages/niñas.html">niñas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/niños.html">Niños<a>
+            <a class="nav-link" href="../pages/niños.html">niños</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
+            <a class="nav-link" href="./pages/nosotros.html">nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
+            <a class="nav-link" href="../pages/contacto.htmls">contacto</a>
           </li>
-
-        </ul>
+          
       </div>
     </div>
   </nav>
@@ -74,7 +67,7 @@
           </p>
         </div >
     </div>
-    <img src="../imagenes/fund.jpg" class="rounded mx-auto d-block img-fluid" alt="...">
+    <img src="../imagenes/a.webp" class="w-100 mx-auto h-100" alt="fundadores" width="w-100" height="200px">
     </section>
    
   
@@ -87,10 +80,9 @@
         <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp mt-2"></i></a>
      </div>
     </footer>
-    <!---script bootstrap--->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"></script>
+  
+        <!---script bootstrap--->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
 
