--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body class="bindex ">
   <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
-    <div class="container-fluid d-flex  flex-column justify-content-center">
+    <div class="container-fluid d-flex  flex-column justify-content-center w-100">
       <a class="navbar-brand" href="./index.html">Los2Primos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
