--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,37 +23,33 @@
 </head>
 <!---body--->
 <body class="bmenu">
-  
-
-<nav class="  navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
-  <div class="container-fluid d-flex  flex-column justify-content-center">
-    <a class="navbar-brand" href="../index.html">Los2Primos</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="../pages/niños.html">Niños<a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
-        </li>
-
-      </ul>
+  <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
+    <div class="container-fluid d-flex  flex-column justify-content-center w-100">
+      <a class="navbar-brand" href="./index.html">Los2Primos</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/niñas.html">niñas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/niños.html">niños</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/nosotros.html">nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/contacto.html">contacto</a>
+          </li>
+          
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
   <main>
     <article class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
 
