--- a/pages/niños.html
+++ b/pages/niños.html
@@ -6,105 +6,101 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!---titulo--->
-  <title>Los2Primos - Niños</title>
-  <meta name="description" content="Encontra la ropa mas canchera para niños">
-  <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria">
+  <title>Los2Primos - Niñas</title>
+  <meta name="description" content="Encontra lo mejor en moda para ellas">
+  <meta name="keywords" content="ropa,ropa para chicas,moda,remeras,polleras,camperas">
   <!---css--->
   <link rel="stylesheet" href="../scss/estilos.css">
-  <!---iconos--->
+  <!---script iconos--->
   <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
+  <!---aos--->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!---bootstrap--->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <!---aos--->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 <!---body--->
 
-<body class="bniños d-flex flex-column">
- <header>  
-
-    <nav class="  navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
-      <div class="container-fluid d-flex  flex-column justify-content-center">
-        <a class="navbar-brand" href="../index.html">Los2Primos</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../pages/niños.html">Niños<a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
-            </li>
-
-          </ul>
-        </div>
+<body class="bniños">
+ 
+  <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
+    <div class="container-fluid d-flex  flex-column justify-content-center w-100">
+      <a class="navbar-brand" href="../index.html">Los2Primos</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/niñas.html">niñas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/niños.html">niños</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/nosotros.html">nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/contacto.html">contacto</a>
+          </li>
+          
       </div>
-    </nav>
+    </div>
+  </nav>
 
   <main>
-    <h1 class="text-center titulo_niños"><span style="color: red "> Pensado para ellos</span></h1>
-    <section>
+    <h1 class="text-center titulo_niños">Pensado para <span style="color: red ">ellos</span></h1>
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
       <p class="text-center mt-2 fs-3">Camperas</p>
       <div class="row ">
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-            src="../imagenes/camp.jpg" class="img rounded float-start mw-100 rounded" alt="campera para niñas">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center "><img
+            src="../imagenes/camp.jpg" class="img rounded float-start mw-100 rounded" alt="campera para niños">
         </div>
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img
-            src="../imagenes/camp3.jpg" class="img rounded mx-auto d-block mw-100 rounded"
-            alt="campera para niñas">
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center  "><img
+            src="../imagenes/camp2.jpg" class="img rounded mx-auto d-block mw-100 rounded" alt="campera para niños">
         </div>
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-            src="../imagenes/camp4.jpg" class="img rounded float-end mw-100 rounded" alt="campera para niñas">
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center "><img
+            src="../imagenes/camp3.jpg" class="img rounded float-end mw-100 rounded" alt="campera para niños">
         </div>
     </section>
-    <section>
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
       <p class="text-center mt-2 fs-3">Remeras</p>
       <div class="row">
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/boy3.jpg" class=" img rounded float-start mw-100 rounded" alt="remeras para niñas">
+            src="../imagenes/boy (1).jpg" class=" img rounded float-start mw-100 rounded" alt="remeras para niños">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/boy (1).jpg" class=" img rounded mx-auto d-block mw-100 rounded "
-            alt="remeras para niñas">
+            src="../imagenes/boy3.jpg" class=" img rounded mx-auto d-block mw-100 rounded " alt="remeras para niños">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/boy4.jpg" class=" img rounded float-end mw-100 rounded " alt="remeras para niñas">
+            src="../imagenes/boy4.jpg" class=" img rounded float-end mw-100 rounded " alt="remeras para niños">
         </div>
     </section>
-    <section>
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
       <p class="text-center mt-2 fs-3">Pantalones</p>
       <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon4.jpg" class="img rounded float-start rounded mw-100 rounded   "
-            alt="pantalon para niñas">
+            src="../imagenes/pantalon2.jpg" class="img rounded float-start rounded mw-100 rounded   " alt="pantalon para niñogots"
+            >
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon3.jpg" class=" img rounded mx-auto d-block rounded mw-100 rounded "
-            alt="pantalon para niñas">
+            src="../imagenes/pantalon3.jpg" class=" img rounded mx-auto d-block rounded mw-100 rounded " alt="pantalon para niños"
+           >
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon2.jpg" class="img rounded float-end  mw-100 rounded"
-            alt="pantalon para niñas">
+            src="../imagenes/pantalon4.jpg" class="img rounded float-end  mw-100 rounded" alt="pantalon para niños"
+            >
         </div>
       </div>
     </section>
   </main>
   <!---pie--->
-  <footer class="mt-3">
-    <div class="d-flex justify-content-center aligin-items-center text-center flex-column">
+  <footer >
+    <div class="text-center d-flex justify-content-center align-items-center flex-column">
       <div class="redes">
         <a href="https://www.instagram.com/los_2_primos2/"><i class=" fa-brands fa-instagram"></i></a>
        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
@@ -115,7 +111,11 @@
         <h6>By Los2Primos</h6>
     </div>
   </div> 
+  
   </footer>
+
+
+
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
